# empathy

./: .gitignore  CHANGELOG.md  CLI_COMMANDS_SUMMARY.md  EXPORT_DESIGN_FINAL.md  EXPORT_FORMAT_CONFIRMATION.md  EXPORT_IMPLEMENTATION_SUMMARY.md  LICENSE  PHASE1_COMPLETION_SUMMARY.md  README.md  UI_ENHANCEMENT_SUMMARY.md  pyproject.toml  test_integration.py  update_main.py
.claude/: settings.local.json
.empathy/: dialogues.yaml
default_extensions_global/client/: CLIENT.md
default_extensions_global/client/skills/: catastrophizing.md  withdrawal.md
default_extensions_global/therapist/: THERAPIST.md
default_extensions_global/therapist/skills/: active_listening.md  cognitive_restructuring.md
default_extensions_users/client_anxious/: CLIENT.md  config.yaml
default_extensions_users/client_avoidant/: CLIENT.md  config.yaml
default_extensions_users/therapist_cbt/: THERAPIST.md  config.yaml
default_extensions_users/therapist_humanistic/: THERAPIST.md  config.yaml
dialogues/session_cbt_anxious/: dialogue.yaml
dialogues/session_cbt_anxious/client/: CLIENT.md
dialogues/session_cbt_anxious/therapist/: THERAPIST.md
dialogues/session_humanistic_avoidant/: dialogue.yaml
dialogues/session_humanistic_avoidant/client/: CLIENT.md
dialogues/session_humanistic_avoidant/therapist/: THERAPIST.md
docs/: architecture.md  configuration.md  getting-started.md  installation.md  tools.md  usage.md
empathy/: __init__.py
empathy/agents/: __init__.py  base.py  callbacks.py  client.py  clinical_manager.py  context.py  emotion_manager.py  feedback.py  langchain_agent.py  therapist.py
empathy/agents/tools/: __init__.py  emotion_state.py  listen.py  mcp_wrapper.py  memory_manage.py  record.py  registry.py  speak.py
empathy/cli/: __init__.py  config.py  confirm.py  main.py  repl.py  tui.py  tui.py_patch
empathy/cli/commands/: __init__.py
empathy/core/: __init__.py  models.py
empathy/extensions/: __init__.py  config.py  mcp.py  psych.py  skills.py
empathy/modes/: __init__.py  auto.py  session.py
empathy/storage/: __init__.py  drafts.py  memory_models.py  memory_repo.py  neo4j_repo.py  registry.py  state.py  summary.py  transcript.py
empathy/utils/: __init__.py  export.py
examples/: README.md
examples/configs/: config.yaml  dialogue.yaml  mcp.json
examples/skills/: anxious-attachment.md  avoidance-behavior.md  catastrophic-thinking.md  cbt-cognitive-restructuring.md  dbt-distress-tolerance.md  defense-mechanism.md
examples/states/dialogue/session_work_anxiety/: dialogue.yaml
examples/states/dialogue/session_work_anxiety/client/: CLIENT.md
examples/states/dialogue/session_work_anxiety/therapist/: THERAPIST.md
examples/states/global/client/: CLIENT.md
examples/states/global/therapist/: THERAPIST.md
examples/states/users/client_anxious_professional/: CLIENT.md  config.yaml
examples/states/users/therapist_cbt_oriented/: THERAPIST.md  config.yaml
tests/: test_concurrency.py  test_export_integration.py  test_langchain_agent.py  test_mcp.py  test_mcp_integration.py  test_phase1.py  test_phase2.py  test_phase3.py  test_phase4.py  test_registry.py  test_tools.py
