[project]
name = "empathy"
version = "0.1.0"
description = "Controllable dialogue generation CLI for psychological research"
requires-python = ">=3.12"
dependencies = [
    # LLM
    "anthropic>=0.40",
    # CLI
    "typer>=0.12",
    "rich>=13",
    "textual>=0.80",
    # Data
    "pydantic>=2.0",
    # Config / extension parsing
    "pyyaml>=6.0",
    "python-frontmatter>=1.1",
    # LangChain integration
    "langchain>=0.1.0",
    "langchain-anthropic>=0.1.0",
    "langchain-community>=0.0.20",
    # Retry and error handling
    "tenacity>=8.0",
    # MCP client
    "mcp>=0.9.0",
    # Graph database for long-term memory
    "neo4j>=5.0",
]

[project.scripts]
empathy = "empathy.cli.main:app"

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "mypy>=1.10",
    "hatchling>=1.29.0",
    "types-PyYAML",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pyright]
# 类型检查严格程度
typeCheckingMode = "standard"  # 或 "basic", "standard", "off"

# Python 版本
pythonVersion = "3.12"
pythonPlatform = "Linux"

# 包含/排除路径
include = ["src", "tests"]
exclude = ["**/__pycache__", "**/node_modules", "build", "dist"]

# 额外路径（用于解析非标准导入）
extraPaths = ["src"]

# 报告级别
reportMissingImports = "error"
reportMissingTypeStubs = "warning"
reportGeneralTypeIssues = "error"

# venv 设置（如果 LSP 无法自动检测）
venvPath = "."
venv = ".venv"

# 存根路径
stubPath = "typings"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["B008"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
